--- a/src/views/_layout/header.ejs
+++ b/src/views/_layout/header.ejs
@@ -8,6 +8,8 @@
         <!-- Dependencies -->
         <link rel="stylesheet" type="text/css" href="../node_modules/materialize-css/dist/css/materialize.min.css"  />
         <link href="/static/styles/main.css" rel="stylesheet">
+        <link href="/static/styles/materialize.css" rel="stylesheet">
+        <link href="/static/styles/style.css" rel="stylesheet">
         <script type="text/javascript" src="../node_modules/jquery/dist/jquery.min.js"></script>
         <script type="text/javascript" src="../node_modules/materialize-css/dist/js/materialize.min.js"></script>
         
