--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,20 +1,119 @@
 <%- include('_layout/header'); -%>
 
-<% for(var i=0; i<pizzas.length; i++) { %>
-    <h2>
-        <%= pizzas[i].name %>
-    </h2>
-<% } %>
 
 
-<form action="/" method="POST">
-  First name:<br>
-  <input type="text" name="firstname" value="Julien">
-  <br>
-  Last name:<br>
-  <input type="text" name="lastname" value="Usson">
-  <br><br>
-  <button type="submit">Envoyer</button>
-</form> 
+  <nav class="blue accent-3" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">PiZZima</a>
+      <ul class="right hide-on-med-and-down">
+        <li><a href="#">Menu</a></li>
+      </ul>
+
+      <ul id="nav-mobile" class="sidenav">
+        <li><a href="#">Menu</a></li>
+      </ul>
+      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+    </div>
+  </nav>
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+      <br><br>
+      <h1 class="center blue-grey-text darken-2-text">
+        BDE Isima
+        <br>
+        <br>
+      <img id="bde" src="https://bde.isima.fr/images/logo.png"/>
+      </h1>
+      <br>
+    </div>
+  </div>
+
+
+  <div class="container">
+    <div class="section">
+
+      <!--   Icon Section   -->
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><img class="responsive-img" src="https://commande.dominos.fr/ManagedAssets/FR/product/PPEP/FR_PPEP_fr_hero_2762.png?v207514802"/></h2>
+            <h5 class="center">Speeds up development</h5>
+            
+            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.
+              <br>
+              <i class="material-icon small right">add</i>
+            </p>
+          </div>
+          
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><img class="responsive-img" src="https://commande.dominos.fr/ManagedAssets/FR/product/PPEP/FR_PPEP_fr_hero_2762.png?v207514802"/></h2>
+            <h5 class="center">User Experience Focused</h5>
+
+            <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.
+              <br>
+              <i class="material-icon small right">add</i>
+            </p>
+          </div>
+        </div>
+
+        <div class="col s12 m4">
+          <div class="icon-block">
+            <h2 class="center light-blue-text"><img class="responsive-img" src="https://commande.dominos.fr/ManagedAssets/FR/product/PPEP/FR_PPEP_fr_hero_2762.png?v207514802"/></h2>
+            <h5 class="center">Easy to work with</h5>
+
+            <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.
+              <br>
+              <i class="material-icon small right">add</i>
+            </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <br><br>
+  </div>
+
+  <footer class="page-footer red accent-3">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Partenaire dominos</h5>
+          <p class="grey-text text-lighten-4">Aller commander chez Dominos plutôt que chez nous, ça nous fait moins de travail.</p>
+
+
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Settings</h5>
+          <ul>
+            <li><a class="white-text" href="https://www.dominos.fr/la-carte">Link 1</a></li>
+            <li><a class="white-text" href="https://www.dominos.fr/la-carte">Link 2</a></li>
+            <li><a class="white-text" href="https://www.dominos.fr/la-carte">Link 3</a></li>
+          </ul>
+        </div>
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">Link 1</a></li>
+            <li><a class="white-text" href="#!">Link 2</a></li>
+            <li><a class="white-text" href="#!">Link 3</a></li>
+            <li><a class="white-text" href="#!">Link 4</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="orange-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+      </div>
+    </div>
+  </footer>
+
+
+  <!--  Scripts-->
+
+
+
 
 <%- include('_layout/footer'); -%>
